--- a/qa-theme/djp-stylish/qa-styles.css
+++ b/qa-theme/djp-stylish/qa-styles.css
@@ -11,6 +11,11 @@
 
 /* General page layout */
 
+.djpconnect {
+	background-color: #02275d !important;
+	color: white !important;
+}
+
 body {
 	background:#FFF;
 	margin:0;
